--- a/Tour/Tour/assets/css/main.css
+++ b/Tour/Tour/assets/css/main.css
@@ -14,15 +14,16 @@
 --------------------------------------------------------------*/
 /* Fonts */
 :root {
-  --default-font: "Roboto",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --heading-font: "Raleway",  sans-serif;
-  --nav-font: "Poppins",  sans-serif;
+  --default-font: "Kanit",  system-ui,
+  --heading-font: "Kanit",  sans-serif;
+  --nav-font: "Kanit",  sans-serif;
+  
 }
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
-  --default-color: #051e23; /* Default color used for the majority of the text content across the entire website */
+  --default-color: #1e2305; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #1c4b56; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #008cad; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
@@ -37,6 +38,7 @@
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #051e23; /* Used for navigation links of the dropdown items in the navigation menu. */
   --nav-dropdown-hover-color: #008cad; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
+  
 }
 
 /* Color Presets - These classes override global colors when applied to any section or element, providing reuse of the sam color scheme. */
@@ -65,7 +67,9 @@
 body {
   color: var(--default-color);
   background-color: var(--background-color);
-  font-family: var(--default-font);
+  font-family: "Kanit", sans-serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
 a {
@@ -86,7 +90,9 @@ h4,
 h5,
 h6 {
   color: var(--heading-color);
-  font-family: var(--heading-font);
+  font-family: "Kanit", sans-serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
 /* PHP Email Form Messages
@@ -183,11 +189,7 @@ h6 {
 
 
 
-.header .btn-getstarted:hover,
-.header .btn-getstarted:focus:hover {
-  color: var(--contrast-color);
-  background: color-mix(in srgb, var(--accent-color), transparent 15%);
-}
+
 
 @media (max-width: 1200px) {
   .header {
@@ -205,8 +207,9 @@ h6 {
   }
 
   .header .btn-getstarted {
-    
-    visibility: hidden;
+    order: 2;
+    margin: 0 10px 0 0;
+    padding: 6px 15px;
   }
 
   .header .navmenu {
@@ -227,6 +230,7 @@ h6 {
 @media (min-width: 1200px) {
   .navmenu {
     padding: 0;
+    
   }
 
   .navmenu ul {
@@ -245,7 +249,7 @@ h6 {
   .navmenu a:focus {
     color: var(--nav-color);
     padding: 18px 15px;
-    font-size: 16px;
+    font-size: 25px;
     font-family: var(--nav-font);
     font-weight: 400;
     display: flex;
@@ -780,7 +784,7 @@ section,
   display: inline-block;
   text-transform: uppercase;
   border-radius: 50px;
-  font-family: var(--default-font);
+  font-family: "Kanit", sans-serif;
 }
 
 .section-title div {
@@ -788,7 +792,7 @@ section,
   margin: 10px 0 0 0;
   font-size: 32px;
   font-weight: 700;
-  font-family: var(--heading-font);
+  font-family: "Kanit", sans-serif;
 }
 
 .section-title div .description-title {
@@ -1221,7 +1225,13 @@ section,
   font-size: 15px;
   line-height: 1.6;
   margin-bottom: 20px;
-  opacity: 0.8;
+  
+  color: white;
+  text-shadow: #000 2px 2px 1px;
+}
+
+.featured-destinations .featured-destination .destination-info h2 {
+  text-shadow: #000 2px 2px;
 }
 
 .featured-destinations .featured-destination .destination-info .destination-meta {
